--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h3>< Ian Dígori ></Ian></h3>
         <ul>
             <li>
-                <p><a href="">/Entre em contato/</a></p>
+                <p><a href="#footer">/Entre em contato/</a></p>
             </li>
         </ul>
     </div>
@@ -51,6 +51,7 @@
        </ul>
     </div>
     <div id="footer">
+        <p>Contatos</p>
         <a href="https://www.instagram.com/iaan_di/">
             <ion-icon name="logo-instagram"></ion-icon>
         </a>
